// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should find added, changed, and removed between build graphs 1`] = `
Object {
  "components": Object {
    "added": Array [
      Object {
        "binaryPath": undefined,
        "code": "Attribute VB_Name = \\"Added\\"
' (added)
",
        "details": Object {
          "path": undefined,
        },
        "filename": "Added.bas",
        "name": "Added",
        "type": "module",
      },
    ],
    "changed": Array [
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"ThisWorkbook\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed...",
        "details": Object {
          "path": "projects/complex/src/ThisWorkbook.cls",
        },
        "filename": "ThisWorkbook.cls",
        "name": "ThisWorkbook",
        "type": "class",
      },
    ],
    "removed": Array [
      Object {
        "binaryPath": undefined,
        "code": "Attribute VB_Name = \\"Validation\\"
Public Function Validate() As String
    On Error GoTo ErrorHandling

    Dim Errors As New Collection

    If ThisWorkbook.VBProject.VBComponents.Count <> 9 Then
        Err...",
        "details": Object {
          "path": "projects/complex/src/Validation.bas",
        },
        "filename": "Validation.bas",
        "name": "Validation",
        "type": "module",
      },
    ],
  },
  "references": Object {
    "added": Array [
      Object {
        "guid": "{0002E157-0000-0000-C000-000000000046}",
        "major": 5,
        "minor": 3,
        "name": "VBIDE",
        "version": "5.3",
      },
    ],
    "changed": Array [],
    "removed": Array [],
  },
}
`;

exports[`should find added, changed, and removed with wildcard sources 1`] = `
Object {
  "components": Object {
    "added": Array [
      Object {
        "binaryPath": undefined,
        "code": "Attribute VB_Name = \\"Added\\"
' (added)
",
        "details": Object {
          "path": undefined,
        },
        "filename": "Added.bas",
        "name": "Added",
        "type": "module",
      },
      Object {
        "binaryPath": undefined,
        "code": "Attribute VB_Name = \\"WebHelpers\\"
''
' WebHelpers v4.1.5
' (c) Tim Hall - https://github.com/VBA-tools/VBA-Web
'
' Contains general-purpose helpers that are used throughout VBA-Web. Includes:
'
' - Logging
' -...",
        "details": Object {
          "path": undefined,
        },
        "filename": "WebHelpers.bas",
        "name": "WebHelpers",
        "type": "module",
      },
      Object {
        "binaryPath": "UserForm1.frx",
        "code": "VERSION 5.00
Begin {C62A69F0-16DC-11CE-9E98-00AA00574A4F} UserForm1
   Caption         =   \\"UserForm1\\"
   ClientHeight    =   3015
   ClientLeft      =   120
   ClientTop       =   465
   ClientWidth     = ...",
        "details": Object {
          "path": undefined,
        },
        "filename": "UserForm1.frm",
        "name": "UserForm1",
        "type": "form",
      },
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"IWebAuthenticator\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_E...",
        "details": Object {
          "path": undefined,
        },
        "filename": "IWebAuthenticator.cls",
        "name": "IWebAuthenticator",
        "type": "class",
      },
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebClient\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed =...",
        "details": Object {
          "path": undefined,
        },
        "filename": "WebClient.cls",
        "name": "WebClient",
        "type": "class",
      },
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebRequest\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
        "details": Object {
          "path": undefined,
        },
        "filename": "WebRequest.cls",
        "name": "WebRequest",
        "type": "class",
      },
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebResponse\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed...",
        "details": Object {
          "path": undefined,
        },
        "filename": "WebResponse.cls",
        "name": "WebResponse",
        "type": "class",
      },
    ],
    "changed": Array [
      Object {
        "binaryPath": undefined,
        "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"ThisWorkbook\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed...",
        "details": Object {
          "path": "projects/wildcard/src/Excel Objects/ThisWorkbook.cls",
        },
        "filename": "ThisWorkbook.cls",
        "name": "ThisWorkbook",
        "type": "class",
      },
    ],
    "removed": Array [
      Object {
        "binaryPath": undefined,
        "code": "Attribute VB_Name = \\"Validation\\"
Public Function Validate() As String
    On Error GoTo ErrorHandling

    Dim Errors As New Collection

    If ThisWorkbook.VBProject.VBComponents.Count <> 8 Then
        Err...",
        "details": Object {
          "path": "projects/wildcard/src/Modules/Validation.bas",
        },
        "filename": "Validation.bas",
        "name": "Validation",
        "type": "module",
      },
    ],
  },
  "references": Object {
    "added": Array [],
    "changed": Array [],
    "removed": Array [],
  },
}
`;

exports[`should find no changes for dev-src 1`] = `
Object {
  "components": Object {
    "added": Array [],
    "changed": Array [],
    "removed": Array [],
  },
  "references": Object {
    "added": Array [],
    "changed": Array [],
    "removed": Array [],
  },
}
`;
